add number bullet

--- a/nbs/00_text_main.ipynb
+++ b/nbs/00_text_main.ipynb
@@ -66,7 +66,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Content Transformation, Augmentations, and Tokenization"
+    "# Helper functions"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 1. Content Transformation, Augmentations, and Tokenization"
    ]
   },
   {
@@ -152,7 +159,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's try PhoBert tokenizer (for Vietnamese texts). PhoBert tokenizer requires input to be word tokenized (using UnderTheSea library)"
+    "We can use this function to show how HuggingFace's tokenizer works and what its outputs look like"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's try PhoBert tokenizer (for Vietnamese texts). PhoBert tokenizer requires the input to be word-segmented. We will use our built-in function `apply_vnmese_word_tokenize` to do this"
    ]
   },
   {
@@ -201,6 +215,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now we can use `tokenizer_explain` to see how our PhoBert-base tokenizer process our input `inp`"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -227,6 +248,13 @@
    ],
    "source": [
     "tokenizer_explain(inp,_tokenizer)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The *Tokenized results* is the outputs of tokenizer, and *Results from tokenizer.convert_ids_to_tokens* shows us what each token id really is, the newly-added start and end tokens, and even the byte-pair encoding in action"
    ]
   },
   {
@@ -324,6 +352,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "This function further showcase how each text transformation and/or text augmentation affect our text input, step by step"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Let's load Phobert tokenizer one more time to test out this function"
    ]
   },
@@ -349,7 +384,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "`apply_vnmese_word_tokenize` also have an option to normalize text"
+    "`apply_vnmese_word_tokenize` also have an option to normalize text (i.e. standardizing text input, getting rid of extra spaces, normalizing accents for Vietnamese text ...)"
    ]
   },
   {
@@ -582,7 +617,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Tokenize Function"
+    "## 2. Tokenize Function"
    ]
   },
   {
@@ -668,7 +703,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Since I am processing Vietnamese text, I will use PhoBert's tokenizer. For more information: [https://huggingface.co/vinai/phobert-base](https://huggingface.co/vinai/phobert-base)"
+    "This is a wrapper for Huggingface' tokenizer, to tokenize and pad your input text, getting them ready for your NLP model"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "I will reuse PhoBert's tokenizer to demonstrate the functionality of this function. For more information about this tokenizer: [https://huggingface.co/vinai/phobert-base](https://huggingface.co/vinai/phobert-base)"
    ]
   },
   {
@@ -859,7 +901,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Metadatas Processing "
+    "## 3. Metadatas Processing "
    ]
   },
   {
@@ -956,7 +998,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Class TextDataController"
+    "This function allows you to concatenate any text metadatas to the front of your main texts. Adding metadatas to your text might help your model to utilize any extra information for its downstream task"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Class TextDataController"
    ]
   },
   {
@@ -1857,7 +1906,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Load data + Basic use case"
+    "## 1. Load data + Basic use case"
    ]
   },
   {
@@ -2831,7 +2880,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Filtering"
+    "## 2. Filtering"
    ]
   },
   {
@@ -3396,7 +3445,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Taking a sample from training data"
+    "## 3. Taking a sample from training data"
    ]
   },
   {
@@ -3659,7 +3708,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Metadatas concatenation"
+    "## 4. Metadatas concatenation"
    ]
   },
   {
@@ -4199,7 +4248,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Label Encodings"
+    "## 5. Label Encodings"
    ]
   },
   {
@@ -5810,7 +5859,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Label transformation"
+    "## 6. Label transformation"
    ]
   },
   {
@@ -6063,7 +6112,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Content Transformation"
+    "## 7. Content Transformation"
    ]
   },
   {
@@ -6651,7 +6700,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Train/Validation Split"
+    "## 8. Train/Validation Split"
    ]
   },
   {
@@ -7488,7 +7537,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Upsampling"
+    "## 9. Upsampling"
    ]
   },
   {
@@ -8253,7 +8302,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Content Augmentation"
+    "## 10. Content Augmentation"
    ]
   },
   {
@@ -8967,7 +9016,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Save and Load TextDataController"
+    "## 11. Save and Load TextDataController"
    ]
   },
   {
