--- a/nbs/00_text_main_benchmark.ipynb
+++ b/nbs/00_text_main_benchmark.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "33e7b7d2",
+   "id": "f2114d60",
    "metadata": {},
    "source": [
     "# Text Processing Benchmark\n",
@@ -16,7 +16,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "deefc5a6",
+   "id": "f4a60d93",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6a00569f",
+   "id": "e9bf920c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0077e721",
+   "id": "a743f93d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,16 +61,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "54d23d0b",
+   "id": "c38d0cd5",
    "metadata": {},
    "source": [
-    "## Benchmark on medium-size dataset (~117k rows)"
+    "## 1. Benchmark on medium-size dataset (~117k rows)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "90067f2b",
+   "id": "64405267",
    "metadata": {},
    "outputs": [
     {
@@ -94,7 +94,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "52522bf3",
+   "id": "9257acdd",
    "metadata": {},
    "outputs": [
     {
@@ -113,7 +113,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5c21b5c4",
+   "id": "9658a866",
    "metadata": {},
    "outputs": [
     {
@@ -134,16 +134,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3edf8ac3",
+   "id": "cd1a98e0",
    "metadata": {},
    "source": [
-    "### Non-streaming dataset"
+    "### a) Non-streaming dataset"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c9a10b3c",
+   "id": "27ae56d6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -178,7 +178,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2c0f469b",
+   "id": "763b4e9e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,14 +194,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d6a28474",
+   "id": "0c169caa",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "4eb32509",
+   "id": "502c512c",
    "metadata": {},
    "source": [
     "#### With filter"
@@ -210,7 +210,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1c6e7db9",
+   "id": "10237f75",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -220,7 +220,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1c435af7",
+   "id": "1b3cba22",
    "metadata": {},
    "outputs": [
     {
@@ -256,7 +256,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c1f2a593",
+   "id": "5eb71968",
    "metadata": {},
    "source": [
     "#### With filter + metadatas concatenation"
@@ -265,7 +265,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "872770ed",
+   "id": "d0ebe861",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -275,7 +275,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e51c0c68",
+   "id": "27292545",
    "metadata": {},
    "outputs": [
     {
@@ -312,7 +312,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "74a40300",
+   "id": "8ae9448e",
    "metadata": {},
    "source": [
     "#### With filter + metadatas concatenation + content transformation + content augmentation"
@@ -321,7 +321,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c72fc26e",
+   "id": "153f90c3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -331,7 +331,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e01c2c6e",
+   "id": "5f71b604",
    "metadata": {},
    "outputs": [
     {
@@ -370,7 +370,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9c83fd97",
+   "id": "da18bc1e",
    "metadata": {},
    "source": [
     "#### With filter + metadatas concatenation + content transformation + content augmentation + no shuffling"
@@ -379,7 +379,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a240754d",
+   "id": "79352a6f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -389,7 +389,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4e4aba3e",
+   "id": "8c1bb308",
    "metadata": {},
    "outputs": [
     {
@@ -428,7 +428,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fca98b9e",
+   "id": "0e47eaff",
    "metadata": {},
    "source": [
     "#### With filter + metadatas concatenation + content transformation + content augmentation + higher batch size"
@@ -437,7 +437,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3657e09d",
+   "id": "600c9f42",
    "metadata": {},
    "outputs": [
     {
@@ -476,7 +476,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "48f92ba0",
+   "id": "1ff12cde",
    "metadata": {},
    "source": [
     "#### With filter + metadatas concatenation + content transformation + content augmentation + higher num proc"
@@ -485,7 +485,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "16a8f2d1",
+   "id": "a0df1589",
    "metadata": {},
    "outputs": [
     {
@@ -526,14 +526,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f9d87e22",
+   "id": "b6854f69",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "17bfa18c",
+   "id": "9a43fa1f",
    "metadata": {},
    "source": [
     "#### With filter + metadatas concatenation + content transformation + content augmentation + iterate the whole dataset (1 epoch)"
@@ -542,7 +542,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "196ae9c2",
+   "id": "b05e7ce0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -552,7 +552,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5124c175",
+   "id": "a4e0dd7a",
    "metadata": {},
    "outputs": [
     {
@@ -592,23 +592,23 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8d4ac81d",
+   "id": "c17c7e69",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "ffebeb31",
+   "id": "168ecf0e",
    "metadata": {},
    "source": [
-    "### With streaming"
+    "### b) With streaming"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "40428d3d",
+   "id": "9e2dff05",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -640,7 +640,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7a290ad9",
+   "id": "6d981a8a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -655,7 +655,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "77e491f2",
+   "id": "52847799",
    "metadata": {},
    "source": [
     "#### With filter"
@@ -664,7 +664,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c08e0316",
+   "id": "659c559f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -674,7 +674,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "288d503c",
+   "id": "624f9815",
    "metadata": {},
    "outputs": [
     {
@@ -711,7 +711,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f7ccb7c9",
+   "id": "3bad4cf7",
    "metadata": {},
    "source": [
     "#### With filter + metadatas concatenation"
@@ -720,7 +720,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fe36ec43",
+   "id": "4f88f3f1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -730,7 +730,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d8aa1612",
+   "id": "0ec86893",
    "metadata": {},
    "outputs": [
     {
@@ -768,7 +768,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3f7929c9",
+   "id": "5a759598",
    "metadata": {},
    "source": [
     "#### With filter + metadatas concatenation + content transformation + content augmentation"
@@ -777,7 +777,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d587ed72",
+   "id": "12d0dc70",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -787,7 +787,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ba25625c",
+   "id": "e29e7769",
    "metadata": {},
    "outputs": [
     {
@@ -827,7 +827,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "45a9f86b",
+   "id": "850ecbc3",
    "metadata": {},
    "source": [
     "#### With filter + metadatas concatenation + content transformation + content augmentation + higher batch size (not recorded)"
@@ -836,7 +836,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9371b20d",
+   "id": "e63cece0",
    "metadata": {},
    "outputs": [
     {
@@ -876,7 +876,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ce89c277",
+   "id": "c69e0b69",
    "metadata": {},
    "source": [
     "#### With filter + metadatas concatenation + content transformation + content augmentation + iterate the whole dataset (1 epoch)"
@@ -885,7 +885,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9aff56c9",
+   "id": "faf19883",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -895,7 +895,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d28ed55e",
+   "id": "cc2d48ca",
    "metadata": {},
    "outputs": [
     {
@@ -935,16 +935,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8ca1223c",
+   "id": "eda52efe",
    "metadata": {},
    "source": [
-    "## Test the effect of batch size and num proc (parallel process) on Non-streaming dataset"
+    "## 2. Test the effect of batch size and num proc (parallel process) on Non-streaming dataset"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "05ae25c5",
+   "id": "7ce0eb8c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -978,7 +978,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e1eebdc7",
+   "id": "92c944af",
    "metadata": {},
    "source": [
     "For non-streaming dataset, text processing + tokenization are the most time-consuming tasks, thus we will check how different batch size and num proc will affect these tasks' running time"
@@ -987,7 +987,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "86c66d7a",
+   "id": "776c0c41",
    "metadata": {},
    "outputs": [
     {
@@ -1028,7 +1028,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1d150787",
+   "id": "6ecaabe9",
    "metadata": {},
    "outputs": [
     {
@@ -1069,7 +1069,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "07413ab9",
+   "id": "e6db3328",
    "metadata": {},
    "outputs": [
     {
@@ -1110,7 +1110,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2e3a2cda",
+   "id": "8a0a1c4d",
    "metadata": {},
    "outputs": [
     {
@@ -1151,7 +1151,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "717fb902",
+   "id": "351512f4",
    "metadata": {},
    "outputs": [
     {
@@ -1191,7 +1191,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f8158c94",
+   "id": "85da8411",
    "metadata": {},
    "source": [
     "Increasing num_proc is more beneficial than increasing processing batch size"
@@ -1199,15 +1199,15 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c3c5aca4",
+   "id": "dbf54267",
    "metadata": {},
    "source": [
-    "## Improving processing time with caching"
+    "## 3. Improving processing time with caching"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "535ead96",
+   "id": "8c82b9d8",
    "metadata": {},
    "source": [
     "The worst processing time is recorded with non-streaming training set, with the following preprocessing: 2-column filtering, 2-column metadatas, 2 content transformations, 2 content augmentation.\n",
@@ -1218,7 +1218,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "701847df",
+   "id": "78c113fe",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1228,7 +1228,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "605f13c5",
+   "id": "0e6f908f",
    "metadata": {},
    "outputs": [
     {
@@ -1328,7 +1328,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "55795b74",
+   "id": "45066585",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1336,7 +1336,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "67e2ccc2",
+   "id": "ae102d0d",
    "metadata": {},
    "outputs": [
     {
@@ -1393,7 +1393,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f52b5961",
+   "id": "1bc01d84",
    "metadata": {},
    "source": [
     "If you cached, then you only need 0.979s to load the data back from caches, instead of wait for 35s to do the process all over again"
@@ -1401,16 +1401,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "65591ca7",
+   "id": "861fb9ad",
    "metadata": {},
    "source": [
-    "## Time and Space Complexity Comparison (as of 5/3/2024)"
+    "## 4. Time and Space Complexity Comparison (as of 5/3/2024)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5609ffe3",
+   "id": "c5b33e01",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1421,7 +1421,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "726c00e9",
+   "id": "b59ca8d0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1435,7 +1435,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6f0c3a97",
+   "id": "77f38f41",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1448,7 +1448,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ebcbda6f",
+   "id": "3e69a813",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1484,7 +1484,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "56e235ad",
+   "id": "b4ee8ab7",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1492,7 +1492,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9f4fc9c4",
+   "id": "a215df29",
    "metadata": {},
    "outputs": [
     {
@@ -1591,7 +1591,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "47aa4ae4",
+   "id": "60100047",
    "metadata": {},
    "outputs": [
     {
@@ -1690,7 +1690,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "10782e6f",
+   "id": "c310bc61",
    "metadata": {},
    "outputs": [
     {
@@ -1789,7 +1789,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "20f56f0a",
+   "id": "ab4c1691",
    "metadata": {},
    "outputs": [
     {
@@ -1887,15 +1887,15 @@
   },
   {
    "cell_type": "markdown",
-   "id": "29a844c3",
+   "id": "a4beae3a",
    "metadata": {},
    "source": [
-    "## Tips and tricks"
+    "## 5. Tips and tricks"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "e93d22f9",
+   "id": "36ff203b",
    "metadata": {},
    "source": [
     "- For non-streaming data, the best way to minimize processing and iteration time is:\n",
