--- a/nbs/00_text_main_lm.ipynb
+++ b/nbs/00_text_main_lm.ipynb
@@ -442,7 +442,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Load data + Basic use case"
+    "## 1. Load data + Basic use case"
    ]
   },
   {
@@ -1013,7 +1013,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Filtering"
+    "## 2. Filtering"
    ]
   },
   {
@@ -1459,7 +1459,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Metadatas concatenation"
+    "## 3. Metadatas concatenation"
    ]
   },
   {
@@ -1645,7 +1645,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Content Transformation"
+    "## 4. Content Transformation"
    ]
   },
   {
@@ -1988,7 +1988,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Train/Validation Split"
+    "## 5. Train/Validation Split"
    ]
   },
   {
@@ -2703,7 +2703,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Tokenization"
+    "## 6. Tokenization"
    ]
   },
   {
@@ -2816,7 +2816,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Option 1: Tokenize our corpus line-by-line"
+    "### a) Option 1: Tokenize our corpus line-by-line"
    ]
   },
   {
@@ -2975,7 +2975,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Option 2: Tokenize every text, then concatenate them together before splitting them in smaller parts.\n"
+    "### b) Option 2: Tokenize every text, then concatenate them together before splitting them in smaller parts.\n"
    ]
   },
   {
@@ -3092,7 +3092,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Striding (For Concatenation of tokens)\n",
+    "### c) Striding (For Concatenation of tokens)\n",
     "\n",
     "If your sentences (or paragraphs) are larger than `max_length`, after concatenation, they will be broken apart; your long paragraph will be incompleted in terms of meaning. **Striding** is a way to somewhat preserve the sentence's meaning, by getting part of the sentence back. We will demonstrate it with an example, and you can compare it with the previous one (without striding) to see the differences"
    ]
@@ -3182,7 +3182,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Data Collator"
+    "## 7. Data Collator"
    ]
   },
   {
@@ -3199,7 +3199,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### For masked language model"
+    "### a) For masked language model"
    ]
   },
   {
@@ -3714,7 +3714,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### For causal language model"
+    "### b) For causal language model"
    ]
   },
   {
@@ -4022,7 +4022,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Save and Load TextDataController"
+    "## 8. Save and Load TextDataController"
    ]
   },
   {
