--- a/nbs/00_text_main_lm_streaming.ipynb
+++ b/nbs/00_text_main_lm_streaming.ipynb
@@ -465,7 +465,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Load data + Basic use case"
+    "## 1. Load data + Basic use case"
    ]
   },
   {
@@ -780,7 +780,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Filtering + Metadatas + Content Transformation + Tokenization"
+    "## 2. Filtering + Metadatas + Content Transformation + Tokenization"
    ]
   },
   {
@@ -822,7 +822,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Option 1: Tokenize our corpus line-by-line"
+    "### a) Option 1: Tokenize our corpus line-by-line"
    ]
   },
   {
@@ -1230,7 +1230,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Option 2: Tokenize every text, then concatenate them together before splitting them in smaller parts.\n"
+    "### b) Option 2: Tokenize every text, then concatenate them together before splitting them in smaller parts.\n"
    ]
   },
   {
@@ -1384,7 +1384,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Striding (For Concatenation of tokens)\n",
+    "### c) Striding (For Concatenation of tokens)\n",
     "\n",
     "If your sentences (or paragraphs) are larger than `max_length`, after concatenation, they will be broken apart; your long paragraph will be incompleted in terms of meaning. **Striding** is a way to somewhat preserve the sentence's meaning, by getting part of the sentence back. We will demonstrate it with an example, and you can compare it with the previous one (without striding) to see the differences"
    ]
@@ -1544,7 +1544,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Data Collator"
+    "## 3. Data Collator"
    ]
   },
   {
@@ -2400,7 +2400,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Save and Load TextDataController"
+    "## 4. Save and Load TextDataController"
    ]
   },
   {
