--- a/nbs/00_text_main_streaming.ipynb
+++ b/nbs/00_text_main_streaming.ipynb
@@ -745,7 +745,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Streaming Capability"
+    "## 1. Streaming Capability"
    ]
   },
   {
@@ -846,7 +846,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Filtering + Metadatas + Label Transformation +  Content Transformation (for Single Head)"
+    "### a) Filtering + Metadatas + Label Transformation +  Content Transformation (for Single Head)"
    ]
   },
   {
@@ -1300,7 +1300,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Filtering + Metadatas + Label Transformation +  Content Transformation + Content Augmentation (for Multi Head: Classification + Regression + Classification)"
+    "### b) Filtering + Metadatas + Label Transformation +  Content Transformation + Content Augmentation (for Multi Head: Classification + Regression + Classification)"
    ]
   },
   {
@@ -1642,7 +1642,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Filtering + Metadatas + Content Transformation + Content Augmentation (for Multi Label)"
+    "### c) Filtering + Metadatas + Content Transformation + Content Augmentation (for Multi Label)"
    ]
   },
   {
@@ -2035,7 +2035,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Batch process vs Line-by-line process"
+    "## 2. Batch process vs Line-by-line process"
    ]
   },
   {
@@ -2059,7 +2059,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Line-by-line over batch process"
+    "### a) Line-by-line over batch process"
    ]
   },
   {
@@ -2676,7 +2676,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Batch-process over line-by-line"
+    "### b) Batch-process over line-by-line"
    ]
   },
   {
@@ -3126,7 +3126,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Save and Load TextDataControllerStreaming"
+    "## 3. Save and Load TextDataControllerStreaming"
    ]
   },
   {
