--- a/nbs/03_model_classification_tutorial.ipynb
+++ b/nbs/03_model_classification_tutorial.ipynb
@@ -85,7 +85,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Define the custom augmentation function"
+    "# 1. Define the custom augmentation function"
    ]
   },
   {
@@ -122,7 +122,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Create a TextDataController object"
+    "# 2. Create a TextDataController object"
    ]
   },
   {
@@ -413,7 +413,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Model Experiment: Roberta Vanilla Single-Head Classification"
+    "# 3. Model Experiment: Roberta Vanilla Single-Head Classification"
    ]
   },
   {
@@ -431,7 +431,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Train Roberta model using the Model Controller"
+    "## a) Train Roberta model using the Model Controller"
    ]
   },
   {
@@ -628,13 +628,13 @@
    "source": [
     "You can log your training using HuggingFace:\n",
     "\n",
-    "- Supported platforms are \"azure_ml\", \"comet_ml\", \"mlflow\", \"neptune\", \"tensorboard\",\"clearml\" and \"wandb\"\n",
+    "- Supported platforms are \"azure_ml\", \"comet_ml\", \"mlflow\", \"neptune\", \"tensorboard\", \"clearml\" and \"wandb\"\n",
     "\n",
     "- References:\n",
     "\n",
-    "    - https://huggingface.co/docs/transformers/v4.28.0/en/main_classes/trainer#transformers.TrainingArguments\n",
+    "    - https://huggingface.co/docs/transformers/v4.40.2/en/main_classes/trainer#transformers.TrainingArguments\n",
     "    \n",
-    "    - https://docs.wandb.ai/guides/integrations/huggingface#:~:text=Logging%20your%20Hugging%20Face%20model,every%20save_steps%20in%20the%20TrainingArguments%20."
+    "    - https://docs.wandb.ai/guides/integrations/huggingface"
    ]
   },
   {
@@ -647,7 +647,7 @@
     "               batch_size=bs,\n",
     "               weight_decay=wd,\n",
     "               save_checkpoint=False,\n",
-    "               compute_metrics=compute_metrics_classification,\n",
+    "               compute_metrics=compute_metrics,\n",
     "               hf_report_to='wandb'\n",
     "              )\n",
     "```"
@@ -687,7 +687,7 @@
     "               weight_decay=wd,\n",
     "               save_checkpoint=True,\n",
     "               o_dir='my_saved_weights',\n",
-    "               compute_metrics=compute_metrics_classification,\n",
+    "               compute_metrics=compute_metrics,\n",
     "\n",
     "```"
    ]
@@ -696,7 +696,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Train model with only a Tokenized DatasetDict (no TextDataController)"
+    "## b) Train model with only a Tokenized DatasetDict (no TextDataController)"
    ]
   },
   {
@@ -994,7 +994,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Make predictions, using TextDataController"
+    "## c) Make predictions, using TextDataController"
    ]
   },
   {
@@ -2355,7 +2355,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Make predictions, using only Tokenized DatasetDict"
+    "## d) Make predictions, using only Tokenized DatasetDict"
    ]
   },
   {
@@ -2828,7 +2828,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Model Experiment: Roberta Custom Classification"
+    "# 4. Model Experiment: Roberta Custom Classification"
    ]
   },
   {
@@ -2887,7 +2887,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Define and train a custom Roberta model"
+    "## a) Define and train a custom Roberta model"
    ]
   },
   {
@@ -3083,7 +3083,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Make predictions"
+    "## b) Make predictions"
    ]
   },
   {
