--- a/nbs/03_model_lm_roberta_tutorial.ipynb
+++ b/nbs/03_model_lm_roberta_tutorial.ipynb
@@ -84,14 +84,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Train a Roberta Language Model From Scratch (with line-by-line tokenization)"
+    "# 1. Train a Roberta Language Model From Scratch (with line-by-line tokenization)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Create a TextDataLMController object"
+    "## a) Create a TextDataLMController object"
    ]
   },
   {
@@ -211,7 +211,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Initialize and train Roberta Language Model from scratch"
+    "## b) Initialize and train Roberta Language Model from scratch"
    ]
   },
   {
@@ -437,7 +437,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Fill mask using model"
+    "## c) Fill mask using model"
    ]
   },
   {
@@ -582,14 +582,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Finetune a Roberta Language Model (with line-by-line tokenization)"
+    "# 2. Finetune a Roberta Language Model (with line-by-line tokenization)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Create a TextDataLMController object"
+    "## a) Create a TextDataLMController object"
    ]
   },
   {
@@ -709,7 +709,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Initialize and train Roberta Language Model"
+    "## b) Initialize and train Roberta Language Model"
    ]
   },
   {
@@ -922,7 +922,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Fill mask using model"
+    "## c) Fill mask using model"
    ]
   },
   {
@@ -1119,7 +1119,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Extract hidden states from model"
+    "## d) Extract hidden states from model"
    ]
   },
   {
@@ -1294,7 +1294,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Finetune a Roberta Language Model (with token concatenation)"
+    "# 3. Finetune a Roberta Language Model (with token concatenation)"
    ]
   },
   {
@@ -1308,7 +1308,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Create a TextDataLMController object"
+    "## a) Create a TextDataLMController object"
    ]
   },
   {
@@ -1426,7 +1426,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Initialize and train Roberta Language Model"
+    "## b) Initialize and train Roberta Language Model"
    ]
   },
   {
@@ -1639,7 +1639,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Fill mask using model"
+    "## c) Fill mask using model"
    ]
   },
   {
