--- a/nbs/index.ipynb
+++ b/nbs/index.ipynb
@@ -1,13 +1,6 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -20,7 +13,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Install"
+    "# 1. Installation"
    ]
   },
   {
@@ -39,7 +32,7 @@
     "It is advised that you manually install torch (with your compatible cuda version if you GPU). Typically it's\n",
     "\n",
     "```sh\n",
-    "pip3 install torch --index-url https://download.pytorch.org/whl/cu118\n",
+    "pip3 install torch\n",
     "```\n",
     "\n",
     "Visit [Pytorch page](https://pytorch.org/) for more information"
@@ -49,14 +42,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# High-Level Overview"
+    "# 2. High-Level Overview"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Supervised Learning"
+    "## 2.1. Supervised Learning"
    ]
   },
   {
@@ -70,7 +63,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### **Text Data Controller: `TextDataController` (for text processing)**"
+    "### **`TextDataController`**: For High-Speed and Customizable Text Processing"
    ]
   },
   {
@@ -78,13 +71,6 @@
    "metadata": {},
    "source": [
     "Here is a list of processings that you can use (in order). You also can skip any processing if you want to."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "![](images/text_processings.PNG)"
    ]
   },
   {
@@ -110,11 +96,14 @@
    "metadata": {},
    "source": [
     "And here is an example when all processings are applied\n",
+    "\n",
+    "\n",
     "```python3\n",
+    "\n",
+    "# define a custom augmentation function\n",
     "from underthesea import text_normalize\n",
     "import nlpaug.augmenter.char as nac\n",
     "\n",
-    "# define the augmentation function\n",
     "def nlp_aug(x,aug=None):\n",
     "    results = aug.augment(x)\n",
     "    if not isinstance(x,list): return results[0]\n",
@@ -164,7 +153,7 @@
    "source": [
     "For an in-depth tutorial on Text Controller for Supervised Learning (`TextDataController`), please visit [here](https://anhquan0412.github.io/that-nlp-library/text_main.html)\n",
     "\n",
-    "This library also a **streamed version of Text Controller** (`TextDataControllerStreaming`), allowing you to work with data without having it entirely on your hard drive. You can still perform all the processings in the non-streamed version, except for **Train/Validation split** (which means you have to define your validation set beforehand), and **Upsampling**. \n",
+    "This library also supports a **streamed version of Text Controller** (`TextDataControllerStreaming`), allowing you to work with data without having it entirely on your memory. You can still perform all the processings in the non-streamed version, except for *Train/Validation split* (which means you have to define your validation set beforehand), and *Upsampling*. \n",
     "\n",
     "For more details on **streaming**, visit [how to create a streamed dataset](https://anhquan0412.github.io/that-nlp-library/text_main_streaming.html) and [how to train a model with a streamed dataset](https://anhquan0412.github.io/that-nlp-library/roberta_singlehead_for_streaming)\n",
     "\n",
@@ -175,7 +164,43 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### **Model and `ModelController`**"
+    "### **`ModelController`**: For customizable model training/inference/interpretation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Here is an example of using `ModelController` to train a simple 6-class classification RoBERTa model, with the data and the preprocessing steps stored in our previous `TextDataController` object"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```python3\n",
+    "\n",
+    "# Load the model from HuggingFace, with the number of classes defined in our TextDataController object\n",
+    "num_labels = len(tdc.label_lists[0])\n",
+    "model = RobertaForSequenceClassification.from_pretrained('roberta-base',num_labels=num_labels)\n",
+    "\n",
+    "\n",
+    "# Create the `ModelController` object\n",
+    "controller = ModelController(model,data_store=tdc,seed=42)\n",
+    "\n",
+    "# You can define multiple metrics for model evaluation\n",
+    "metric_funcs = [partial(f1_score,average='macro'),accuracy_score] \n",
+    "\n",
+    "# Training the model for 3 epochs, and save all checkpoints to 'my_saved_weights' directory\n",
+    "controller.fit(epochs = 3,\n",
+    "               learning_rate = 1e-4,\n",
+    "               metric_funcs = metric_funcs,\n",
+    "               batch_size = 32,\n",
+    "               save_checkpoint=True,\n",
+    "               o_dir='my_saved_weights',\n",
+    "               compute_metrics=compute_metrics\n",
+    "              )\n",
+    "```"
    ]
   },
   {
@@ -184,7 +209,7 @@
    "source": [
     "The library can perform the following:\n",
     "\n",
-    "- **Classification ([simple tutorial](https://anhquan0412.github.io/that-nlp-library/model_classification_tutorial.html))**\n",
+    "- **[Classification](https://anhquan0412.github.io/that-nlp-library/model_classification_tutorial.html)**\n",
     "\n",
     "- **[Regression](https://anhquan0412.github.io/that-nlp-library/roberta_multihead_regression.html)**\n",
     "\n",
@@ -206,14 +231,14 @@
    "source": [
     "### Decoupling of Text Controller and Model Controller\n",
     "\n",
-    "In this library, you can either use `TextDataController` only to handle all the text processings, and have the final processed-HuggingFace-DatasetDict returned to you. But if you have your own processed DatasetDict, you can skip the text controller and use only the `ModelController` for training your data. There’s a quick tutorial on this decoupling [here](https://anhquan0412.github.io/that-nlp-library/model_classification_tutorial.html#train-model-with-only-a-tokenized-datasetdict-no-textdatacontroller)\n"
+    "In this library, you can utilize `TextDataController` only to handle all the text processings, and have the final processed-HuggingFace-DatasetDict returned to you. But if you have your own processed DatasetDict, you can skip the `TextDataController` and use only the `ModelController` for training your data. There’s a quick tutorial on this decoupling [here](https://anhquan0412.github.io/that-nlp-library/model_classification_tutorial.html#b-train-model-with-only-a-tokenized-datasetdict-no-textdatacontroller)\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Language Modeling"
+    "## 2.2 Language Modeling"
    ]
   },
   {
@@ -227,21 +252,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Text Data Controller for Language Model: `TextDataLMController`\n",
+    "### **`TextDataLMController`**: Text Data Controller for Language Model\n",
     "\n",
-    "Similarly to `TextDatController`, `TextDataLMController` also provide a list of processings (except for **Label Processing**, **Upsampling** and **Text Augmentation**). The controller also allow tokenization line-by-line or by token concatenation. \n",
+    "Similarly to `TextDataController`, `TextDataLMController` also provide a list of processings (except for *Label Processing*, *Upsampling* and *Text Augmentation*). The controller also allows tokenization line-by-line or by token concatenation. \n",
+    "\n",
     "Visit the tutorial [here](https://anhquan0412.github.io/that-nlp-library/text_main_lm.html)\n",
     "\n",
-    "There’s also a streamed version (`TextDataLMControllerStreaming`)"
+    "There’s also a streamed version (`TextDataLMControllerStreaming`). Here is a [tutorial on how to train a language model with a streamed dataset](https://anhquan0412.github.io/that-nlp-library/roberta_lm_for_streaming.html)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Language Model Controller: `ModelLMController`\n",
+    "### **`ModelLMController`**: Language Model Controller\n",
     "\n",
-    "The library can train a [masked language modeling](https://anhquan0412.github.io/that-nlp-library/model_lm_roberta_tutorial.html) (BERT, roBERTa …) or a [causal language model](https://anhquan0412.github.io/that-nlp-library/model_lm_gpt2_tutorial.html) (GPT) either from scratch or from existing pretrained language models. "
+    "The library can train a [masked language modeling](https://anhquan0412.github.io/that-nlp-library/model_lm_roberta_tutorial.html) (BERT, RoBERTa …) or a [causal language model](https://anhquan0412.github.io/that-nlp-library/model_lm_gpt2_tutorial.html) (GPT) either from scratch or from existing pretrained language models. "
    ]
   },
   {
@@ -250,14 +276,14 @@
    "source": [
     "### Hidden States Extraction\n",
     "\n",
-    "The library also allow you to [extract the hidden states](https://anhquan0412.github.io/that-nlp-library/hidden_states.html) of your choice, for further analysis"
+    "The library also allow you to [extract the hidden states](https://anhquan0412.github.io/that-nlp-library/hidden_states.html) of your choice, for further analysis or other downstream tasks that requires a vector representation of your text input."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Documentation\n",
+    "# 3. Documentation\n",
     "\n",
     "Visit [https://anhquan0412.github.io/that-nlp-library/](https://anhquan0412.github.io/that-nlp-library/)"
    ]
